<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">雅诗</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">username</string>
    <string name="password">password</string>
    <string name="repeat_psw">repeat password</string>
    <string name="nickname">输入昵称</string>

    <string name="log_in">登陆</string>
    <string name="reg_in">注册</string>
    <string name="clean">清空</string>
    <string name="splash_str">优雅如诗</string>

    <string name="title_activity_main">MVP Example</string>
    <string name="username_error">Username cannot be empty</string>
    <string name="password_error">Password cannot be empty</string>

    <string name="write">编辑</string>
    <string name="read">查阅</string>
    <string name="discovery">发现</string>
    <string name="setting">设置</string>

</resources>
