<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="16dp"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/log_page_et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/ic_action_person"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/user_name" />

    <EditText
        android:id="@+id/log_page_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/ic_action_accounts"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/log_page_bt_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@mipmap/ic_action_accept"
        android:text="@string/log_in" />


    <Button
        android:id="@+id/log_page_bt_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@mipmap/ic_action_accept"
        android:text="@string/reg_in" />



</LinearLayout>