<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:qual1ty="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <com.qual1ty.yashi_git.widget.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_one"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            qual1ty:text_size="12sp"
            qual1ty:view_icon="@mipmap/ic_launcher"
            qual1ty:view_text="@string/write" />

        <com.qual1ty.yashi_git.widget.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_two"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            qual1ty:text_size="12sp"
            qual1ty:view_icon="@mipmap/ic_launcher"
            qual1ty:view_text="@string/read" />

        <com.qual1ty.yashi_git.widget.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_three"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            qual1ty:text_size="12sp"
            qual1ty:view_icon="@mipmap/ic_launcher"
            qual1ty:view_text="@string/discovery" />

        <com.qual1ty.yashi_git.widget.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_four"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            qual1ty:text_size="12sp"
            qual1ty:view_icon="@mipmap/ic_launcher"
            qual1ty:view_text="@string/setting" />
    </LinearLayout>

</LinearLayout>  